@@ -176,19 +176,7 @@ enum {
 	dns_nsstatscounter_udp = 41,
 	dns_nsstatscounter_tcp = 42,
 
-	dns_nsstatscounter_nsidopt = 43,
-	dns_nsstatscounter_expireopt = 44,
-	dns_nsstatscounter_otheropt = 45,
-	dns_nsstatscounter_ecsopt = 46,
-
-	dns_nsstatscounter_sitopt = 47,
-	dns_nsstatscounter_sitbadsize = 48,
-	dns_nsstatscounter_sitbadtime = 49,
-	dns_nsstatscounter_sitnomatch = 50,
-	dns_nsstatscounter_sitmatch = 51,
-	dns_nsstatscounter_sitnew = 52,
-
-	dns_nsstatscounter_max = 53
+	dns_nsstatscounter_max = 43
 };
 
 void
